// Code generated by protoc-gen-go. DO NOT EDIT.
// versions:
// 	protoc-gen-go v1.31.0
// 	protoc        v4.23.4
// source: football.proto

package pb

import (
	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
	reflect "reflect"
	sync "sync"
)

const (
	// Verify that this generated code is sufficiently up-to-date.
	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
	// Verify that runtime/protoimpl is sufficiently up-to-date.
	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
)

type Football struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields

	Team    string `protobuf:"bytes,1,opt,name=team,proto3" json:"team,omitempty"`
	League  string `protobuf:"bytes,2,opt,name=league,proto3" json:"league,omitempty"`
	Country string `protobuf:"bytes,3,opt,name=country,proto3" json:"country,omitempty"`
}

func (x *Football) Reset() {
	*x = Football{}
	if protoimpl.UnsafeEnabled {
		mi := &file_football_proto_msgTypes[0]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *Football) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*Football) ProtoMessage() {}

func (x *Football) ProtoReflect() protoreflect.Message {
	mi := &file_football_proto_msgTypes[0]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use Football.ProtoReflect.Descriptor instead.
func (*Football) Descriptor() ([]byte, []int) {
	return file_football_proto_rawDescGZIP(), []int{0}
}

func (x *Football) GetTeam() string {
	if x != nil {
		return x.Team
	}
	return ""
}

func (x *Football) GetLeague() string {
	if x != nil {
		return x.League
	}
	return ""
}

func (x *Football) GetCountry() string {
	if x != nil {
		return x.Country
	}
	return ""
}

var File_football_proto protoreflect.FileDescriptor

var file_football_proto_rawDesc = []byte{
	0x0a, 0x0e, 0x66, 0x6f, 0x6f, 0x74, 0x62, 0x61, 0x6c, 0x6c, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
	0x12, 0x02, 0x70, 0x62, 0x22, 0x50, 0x0a, 0x08, 0x46, 0x6f, 0x6f, 0x74, 0x62, 0x61, 0x6c, 0x6c,
	0x12, 0x12, 0x0a, 0x04, 0x74, 0x65, 0x61, 0x6d, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04,
	0x74, 0x65, 0x61, 0x6d, 0x12, 0x16, 0x0a, 0x06, 0x6c, 0x65, 0x61, 0x67, 0x75, 0x65, 0x18, 0x02,
	0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x6c, 0x65, 0x61, 0x67, 0x75, 0x65, 0x12, 0x18, 0x0a, 0x07,
	0x63, 0x6f, 0x75, 0x6e, 0x74, 0x72, 0x79, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x63,
	0x6f, 0x75, 0x6e, 0x74, 0x72, 0x79, 0x42, 0x26, 0x5a, 0x24, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6a, 0x61, 0x6b, 0x75, 0x62, 0x2f, 0x61, 0x69, 0x6f, 0x70, 0x6f,
	0x72, 0x74, 0x61, 0x6c, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2f, 0x70, 0x62, 0x62, 0x06,
	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
}

var (
	file_football_proto_rawDescOnce sync.Once
	file_football_proto_rawDescData = file_football_proto_rawDesc
)

func file_football_proto_rawDescGZIP() []byte {
	file_football_proto_rawDescOnce.Do(func() {
		file_football_proto_rawDescData = protoimpl.X.CompressGZIP(file_football_proto_rawDescData)
	})
	return file_football_proto_rawDescData
}

var file_football_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
var file_football_proto_goTypes = []interface{}{
	(*Football)(nil), // 0: pb.Football
}
var file_football_proto_depIdxs = []int32{
	0, // [0:0] is the sub-list for method output_type
	0, // [0:0] is the sub-list for method input_type
	0, // [0:0] is the sub-list for extension type_name
	0, // [0:0] is the sub-list for extension extendee
	0, // [0:0] is the sub-list for field type_name
}

func init() { file_football_proto_init() }
func file_football_proto_init() {
	if File_football_proto != nil {
		return
	}
	if !protoimpl.UnsafeEnabled {
		file_football_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*Football); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
	}
	type x struct{}
	out := protoimpl.TypeBuilder{
		File: protoimpl.DescBuilder{
			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
			RawDescriptor: file_football_proto_rawDesc,
			NumEnums:      0,
			NumMessages:   1,
			NumExtensions: 0,
			NumServices:   0,
		},
		GoTypes:           file_football_proto_goTypes,
		DependencyIndexes: file_football_proto_depIdxs,
		MessageInfos:      file_football_proto_msgTypes,
	}.Build()
	File_football_proto = out.File
	file_football_proto_rawDesc = nil
	file_football_proto_goTypes = nil
	file_football_proto_depIdxs = nil
}
